v2.1 Attempting fix for background image jitter on mobile

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ html {
 /*  Parallax support for a parallax image effect */
 .parallax {
     min-height: 80vh;
+    top: 50px;
+    left: 0;
 
     background-attachment: fixed;
     background-position: center;
